...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/record_student_photo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        android:layout_marginTop="16dp"
        android:text="@string/placeholder"
        app:layout_constraintStart_toEndOf="@+id/record_student_photo"
        app:layout_constraintTop_toBottomOf="@+id/record_type" />

    <TextView
        android:id="@+id/record_building_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="51dp"
        android:text="@string/placeholder"
        app:layout_constraintStart_toEndOf="@+id/record_type"
...
