...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/currLoc_text"
        app:layout_constraintTop_toTopOf="@+id/currLoc_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/major"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingTop="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/major_text"
        app:layout_constraintTop_toTopOf="@+id/major_text" />

    <TextView
        android:id="@+id/id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingTop="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
...
